--- a/resources/public/web_app_manifest.json
+++ b/resources/public/web_app_manifest.json
@@ -3,8 +3,23 @@
   "name": "Mayvenn Virgin Human Hair",
   "icons": [
     {
-      "src": "/images/favicon.png",
-      "sizes": "64x64",
+      "src": "apple-touch-icon-57x57.png",
+      "sizes": "57x57",
+      "type": "image/png"
+    },
+    {
+      "src": "apple-touch-icon-76x76.png",
+      "sizes": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "apple-touch-icon-120x120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "apple-touch-icon-152x152.png",
+      "sizes": "152x152",
       "type": "image/png"
     }
   ],
