Shorten name shown when loading webapp

--- a/resources/public/web_app_manifest.json
+++ b/resources/public/web_app_manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Mayvenn",
-  "name": "Mayvenn Virgin Human Hair",
+  "name": "Mayvenn",
   "icons": [
     {
       "src": "apple-touch-icon-57x57.png",
