--- a/resources/public/web_app_manifest.json
+++ b/resources/public/web_app_manifest.json
@@ -3,32 +3,32 @@
     "name": "Mayvenn",
     "icons": [
         {
-            "src": "/images/apple-touch-icon-57x57.png",
+            "src": "/apple-touch-icon-57x57.png",
             "sizes": "57x57",
             "type": "image/png"
         },
         {
-            "src": "/images/apple-touch-icon-76x76.png",
+            "src": "/apple-touch-icon-76x76.png",
             "sizes": "76x76",
             "type": "image/png"
         },
         {
-            "src": "/images/apple-touch-icon-120x120.png",
+            "src": "/apple-touch-icon-120x120.png",
             "sizes": "120x120",
             "type": "image/png"
         },
         {
-            "src": "/images/apple-touch-icon-152x152.png",
+            "src": "/apple-touch-icon-152x152.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "/images/android-chrome-192x192.png",
+            "src": "/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/images/android-chrome-256x256.png",
+            "src": "/android-chrome-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         }
