Pin jsqr at 1.1.0
Co-authored-by: Justin Watt <justinwatt@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "basscss-addons": "^1.0.0-beta4",
     "basscss-background-images": "^0.1.1",
     "basscss-ui-utility-groups": "^1.0.1",
-    "jsqr": "^1.0.4",
+    "jsqr": "1.1.0",
     "normalize.css": "^4.2.0",
     "react-slick": "^0.14.6"
   },
