Support build-args and fix docker image to java8

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,9 @@
-FROM clojure
+FROM clojure:openjdk-8-lein
 
 WORKDIR /app
 ADD project.clj /app/project.clj
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
 RUN lein deps
 
 ADD . /app
