--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ resources/public/cdn
 resources/public/sourcemaps
 resources/rev-manifest.json
 resources/client_version.txt
+resources/*.stat
 node_modules/
 /package-lock.json
 .cpcache/
