WIP: Upgrade to figwheel-main
In order to get clojurescript module support in dev, we need to switch from
lein-figwheel to figwheel-main.

Also, revert jsQR dynamic loading since that is in a separate module now.

TODO: fix on-reload hooks

Co-authored-by: Justin Watt <justinw@mayvenn.com>

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ resources/public/js/out
 resources/public/css
 resources/public/cdn
 resources/public/sourcemaps
+resources/public/cljs-out
 resources/rev-manifest.json
 resources/client_version.txt
 resources/*.stat
