--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "basscss-background-images": "^0.1.1",
     "basscss-ui-utility-groups": "^1.0.1",
     "jsqr": "1.1.0",
-    "normalize.css": "^4.2.0",
-    "react-slick": "^0.14.6"
+    "normalize.css": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
