--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-custom-properties": "^5.0.0",
     "postcss-discard-comments": "^2.0.3",
     "postcss-import": "^8.0.2",
+    "postcss-inline-svg": "^4.1.0",
     "run-sequence": "^1.1.4",
     "yargs": "^3.10.0"
   },
