--- a/resources/public/web_app_manifest.json
+++ b/resources/public/web_app_manifest.json
@@ -3,32 +3,42 @@
     "name": "Mayvenn",
     "icons": [
         {
-            "src": "/apple-touch-icon-57x57-precomposed.png",
+            "src": "/favicon-57.png",
             "sizes": "57x57",
             "type": "image/png"
         },
         {
-            "src": "/apple-touch-icon-76x76-precomposed.png",
+            "src": "/favicon-76.png",
             "sizes": "76x76",
             "type": "image/png"
         },
         {
-            "src": "/apple-touch-icon-120x120-precomposed.png",
+            "src": "/favicon-120.png",
             "sizes": "120x120",
             "type": "image/png"
         },
         {
-            "src": "/apple-touch-icon-152x152-precomposed.png",
+            "src": "/favicon-152.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-192x192-precomposed.png",
+            "src": "/favicon-180.png",
+            "sizes": "180x180",
+            "type": "image/png"
+        },
+        {
+            "src": "/favicon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-256x256-precomposed.png",
+            "src": "/favicon-196.png",
+            "sizes": "196x196",
+            "type": "image/png"
+        },
+        {
+            "src": "/favicon-256.png",
             "sizes": "256x256",
             "type": "image/png"
         }
